--- a/package.json
+++ b/package.json
@@ -20,19 +20,82 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
-    "@ionic-native/core": "~4.10.0",
+    "@ionic-native/android-fingerprint-auth": "^4.10.1",
+    "@ionic-native/background-geolocation": "^4.11.0",
+    "@ionic-native/camera": "^4.11.0",
+    "@ionic-native/core": "^4.11.0",
+    "@ionic-native/date-picker": "^4.11.0",
+    "@ionic-native/diagnostic": "^4.11.0",
+    "@ionic-native/geolocation": "^4.11.0",
+    "@ionic-native/google-maps": "^4.9.1",
+    "@ionic-native/native-geocoder": "^4.11.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
+    "@ionic/lab": "^1.0.0",
     "@ionic/storage": "2.1.3",
+    "cordova-android": "7.0.0",
+    "cordova-ios": "4.5.5",
+    "cordova-plugin-android-fingerprint-auth": "^1.4.4",
+    "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-datepicker": "^0.9.3",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-googlemaps": "^2.3.8",
+    "cordova-plugin-ionic-keyboard": "^2.1.2",
+    "cordova-plugin-ionic-webview": "^2.0.1",
+    "cordova-plugin-mauron85-background-geolocation": "^2.3.5",
+    "cordova-plugin-nativegeocoder": "^3.1.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova.plugins.diagnostic": "^4.0.8",
+    "font-awesome": "^4.7.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "minimist": "^1.2.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "xml2js": "^0.4.19",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.11",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "config": {
+    "ionic_copy": "./scripts/copy-custom-libs.js"
+  },
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-android-fingerprint-auth": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyAWXOZWZ3If-gfNsmi16FVj8TLsqqzTCTY",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "26.1.0"
+      },
+      "cordova-plugin-camera": {},
+      "cordova-plugin-nativegeocoder": {},
+      "cordova-plugin-mauron85-background-geolocation": {
+        "GOOGLE_PLAY_SERVICES_VERSION": "11+",
+        "ANDROID_SUPPORT_LIBRARY_VERSION": "23+",
+        "ICON": "@mipmap/icon",
+        "SMALL_ICON": "@mipmap/icon",
+        "ACCOUNT_NAME": "@string/app_name",
+        "ACCOUNT_LABEL": "@string/app_name",
+        "ACCOUNT_TYPE": "$PACKAGE_NAME.account",
+        "CONTENT_AUTHORITY": "$PACKAGE_NAME"
+      },
+      "cordova.plugins.diagnostic": {},
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-datepicker": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
