--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@capacitor/android": "^1.0.0-beta.4",
+    "@capacitor/cli": "^1.0.0-beta.4",
+    "@capacitor/core": "^1.0.0-beta.4",
     "@ionic-native/android-fingerprint-auth": "^4.10.1",
     "@ionic-native/background-geolocation": "^4.11.0",
     "@ionic-native/camera": "^4.11.0",
@@ -28,30 +31,35 @@
     "@ionic-native/diagnostic": "^4.11.0",
     "@ionic-native/geolocation": "^4.11.0",
     "@ionic-native/google-maps": "^4.9.1",
+    "@ionic-native/http": "^4.11.0",
     "@ionic-native/native-geocoder": "^4.11.0",
+    "@ionic-native/onesignal": "^4.11.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/lab": "^1.0.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
+    "cordova-browser": "5.0.4",
     "cordova-ios": "4.5.5",
+    "cordova-plugin-advanced-http": "^1.11.1",
     "cordova-plugin-android-fingerprint-auth": "^1.4.4",
     "cordova-plugin-camera": "^4.0.3",
     "cordova-plugin-datepicker": "^0.9.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-googlemaps": "^2.3.8",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^2.0.1",
     "cordova-plugin-mauron85-background-geolocation": "^2.3.5",
     "cordova-plugin-nativegeocoder": "^3.1.2",
-    "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova.plugins.diagnostic": "^4.0.8",
     "font-awesome": "^4.7.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "minimist": "^1.2.0",
+    "onesignal-cordova-plugin": "^2.4.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "xml2js": "^0.4.19",
@@ -92,10 +100,9 @@
       },
       "cordova.plugins.diagnostic": {},
       "cordova-plugin-geolocation": {},
-      "cordova-plugin-datepicker": {}
+      "cordova-plugin-datepicker": {},
+      "cordova-plugin-advanced-http": {}
     },
-    "platforms": [
-      "android"
-    ]
+    "platforms": []
   }
 }
